--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             margin-right: 150px;
             font-size: 20px;
         }
+
+        .img {
+            float: left; 
+            margin-left: 150px;
+            margin-bottom: px;
+            height: 400px;
+        }
     </style>
 </head>
 
@@ -42,11 +49,11 @@
     </header>
 
     <main style="text-align: center;">
-        <h1>О компании</h1>
+        <h1 style="text-shadow: 3px 3px 3px gray;">О компании</h1>
         <div class="border">
             <div style="margin-left: 50px; margin-right: 50px;">
                 ПАО «ДЭК» образовано путем слияния региональных энергосистем Дальнего Востока.  
-                Компания ведет свою деятельность на территории семи регионов ДФО: Приморского края,
+                Компания ведет свою деятельность <u>на территории семи регионов ДФО</u>Г: Приморского края,
                 Хабаровского края, Амурской области, ЕАО, Сахалинской области, Камчатского края, 
                 Республики Саха (Якутия).  
             </div>
@@ -80,21 +87,63 @@
     </div>
 
     <div class="text" style="padding-top: 15px;">
-        Основными видами деятельности Общества является:
+        <u>Основными видами деятельности Общества является:</u>
     </div>
 
     <ul class="text">
-        <li>выполнение функций гарантирующего поставщика;</li>
-        <li>оказание услуг по регистрации групп точек поставки и получения допуска к торговой системе ОРЭМ в интересах крупных потребителей;</li>
-        <li>оказание услуг третьим лицам, в том числе по сбору платежей за отпускаемые товары и оказываемые услуги;</li>
-        <li>диагностика, эксплуатация, ремонт, замена и проверка средств измерений и учета электрической и тепловой энергии;</li>
-        <li>оказание услуг по организации коммерческого учета;</li>
-        <li>разработка, организация и проведение энергосберегающих мероприятий;</li>
-        <li>инвестиционная деятельность;</li>
-        <li>выполнение агентских функций по расчетам за коммунальные услуги на основании агентских договоров с гарантирующими поставщиками и ресурсоснабжающими организациями.</li>
-        <li>оказание консалтинговых и иных услуг, связанных с реализацией электрической энергии юридическим и физическим лицам.</li>
-
+        <li><i>выполнение функций гарантирующего поставщика;</i></li>
+        <li><i>оказание услуг по регистрации групп точек поставки и получения допуска к торговой системе ОРЭМ в интересах крупных потребителей;</i></li>
+        <li><i>оказание услуг третьим лицам, в том числе по сбору платежей за отпускаемые товары и оказываемые услуги;</i></li>
+        <li><i>диагностика, эксплуатация, ремонт, замена и проверка средств измерений и учета электрической и тепловой энергии;</i></li>
+        <li><i>оказание услуг по организации коммерческого учета;</i></li>
+        <li><i>разработка, организация и проведение энергосберегающих мероприятий;</i></li>
+        <li><i>инвестиционная деятельность;</i></li>
+        <li><i>выполнение агентских функций по расчетам за коммунальные услуги на основании агентских договоров с гарантирующими поставщиками и ресурсоснабжающими организациями.</i></li>
+        <li><i>оказание консалтинговых и иных услуг, связанных с реализацией электрической энергии юридическим и физическим лицам.</i></li>
     </ul>
+
+    <div class="text">
+        ПАО «ДЭК» входит в холдинг <u>Группы компаний Русгидро</u>, 
+        ее управление осуществляется посредством дочернего общества – <u>ГАО «ЭСК РусГидро».</u>
+    </div>
+
+    <h2 style="margin: 60px 150px 0px 0px">
+    <img src="director.jpg" class="img">
+    Исполнительным директором ПАО «ДЭК» 
+    с февраля 2019 года является Александр Николаевич Юров.
+    </h2>
+
+    <p style="margin-right: 150px;">  Свою трудовую деятельность начал в 1992 году в 25  
+        Государственном предприятии электрических сетей ВМФ 
+        (г. Владивосток) в  должности главного инженера. 
+        С 1998 по 2000 год назначен начальником  Государственного 
+        предприятия электрических сетей ВМФ (г. Владивосток). С 2000  по 
+        2002 год работал начальником Инспекции энергонадзора ТОФ.
+    </p>
+
+    <p style="margin-right: 150px;">
+        С 2004 по 2009 год занимал должность директора МУПВ 
+        «Владивостокское предприятие электрических сетей». 
+        С сентября 2009 по март 2017 года работал в Администрации 
+        г. Владивостока заместителем главы по ТЭК.
+    </p>
+
+    <p style="margin-right: 150px;">
+        С апреля 2017 года по декабрь 2017 года назначен 
+        Вице-губернатором по ТЭК в Администрации Приморского
+         края. С апреля 2018 года по февраль 2019 года работал 
+         в должности заместителя главы по ТЭК в Администрации 
+         города Владивостока, выполняя обязанности по развитию 
+         энергетики на краевом уровне, осуществляя контроль отраслей 
+         жилищного-коммунального и лесного хозяйств.
+    </p>
+
+    <p style="margin-right: 150px; left: 150px;" >
+        С 25 февраля 2019 года по 31 декабря 2019 года занимал 
+        должность Операционного директора ПАО «ДЭК», с 01.01.2020 
+        по настоящее время занимает должность Исполнительного директора Общества.
+    </p>
+
     </main>
 
 
