--- a/2.html
+++ b/2.html
@@ -13,7 +13,7 @@
         <img src="logo.png" class="logo">
         <ul class="menu">
             <li class="current"><a href="index.html">О компании</a></li>
-            <li class="current"><a href="2.html">Основные финансовые показатели</a></li></li>
+            <li class="current"><a href="2.html" style="color: rgb(239, 83, 27);">Основные финансовые показатели</a></li></li>
             <li class="current"><a href="3.html">Контактные данные</a></li></li>
             <li class="current"><a href="4.html">Видео</a></li></li>
         </ul>
