--- a/3.html
+++ b/3.html
@@ -14,7 +14,7 @@
         <ul class="menu">
             <li class="current"><a href="index.html">О компании</a></li>
             <li class="current"><a href="2.html">Основные финансовые показатели</a></li></li>
-            <li class="current"><a href="3.html">Контактные данные</a></li></li>
+            <li class="current"><a href="3.html" style="color: rgb(239, 83, 27);">Контактные данные</a></li></li>
             <li class="current"><a href="4.html">Видео</a></li></li>
         </ul>
     </header>
