--- a/4.html
+++ b/4.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RGR</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        .video {
+            height: 550;
+            width: 1200;
+            margin-left: 110px;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,12 +22,16 @@
             <li class="current"><a href="index.html">О компании</a></li>
             <li class="current"><a href="2.html">Основные финансовые показатели</a></li></li>
             <li class="current"><a href="3.html">Контактные данные</a></li></li>
-            <li class="current"><a href="4.html">Видео</a></li></li>
+            <li class="current"><a href="4.html" style="color: rgb(239, 83, 27);">Видео</a></li></li>
         </ul>
     </header>
 
     <main>
-        <h1>Видео о компании</h1>
+        <h1 style="text-align: center;">Регистрируйся в "Личном кабинете" ПАО "ДЭК"</h1>
+        <iframe class="video" src="https://www.youtube.com/watch?v=ii_kh6u1ZnY" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+        picture-in-picture; web-share" allowfullscreen>
+        </iframe>
     </main>
 
 
