--- a/2.html
+++ b/2.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RGR</title>
     <link rel="stylesheet" href="main.css">
+
+    <style> 
+    .table {
+        width: 60%;
+        margin: auto;
+        padding: 10px;
+    }
+    </style>
 </head>
 
 <body>
@@ -20,7 +28,38 @@
     </header>
 
     <main>
-        <h1>Основные финансовые показатели</h1>
+        <h1 style="text-shadow: 3px 3px 3px gray; text-align: center;">
+            Основные финансовые показатели
+        </h1>
+
+        <h2 style="margin: 70px 150px 20px 150px; text-align: center;"><u>Рыночная капитализация ценных бумаг по итогам торгов на
+            фондовом рынке ПАО Московская Биржа на конец I квартала 2023 года</u></h2>
+
+        <table border="1" class="table">
+            <tr>
+                <th><b>Торговый код ценной бумаги</b><br></th>
+                <th>Краткое наименование эмитента ценной бумаги</th>
+                <th>Категория ценной бумаги (ао - акция обыкновенная, ап - акция привилегированная)</th>
+                <th><span>Государственный<br>
+                          регистрационный<br>
+                          номер выпуска<br>
+                          (дополнительного<br>
+                          выпуска)*</span>
+                </th>
+                <th>Объем выпуска, штук</th>
+                <th>Рыночная цена (3) на 31.03.2023, руб.</th>
+                <th>Капитализация, руб.</th>
+            </tr>
+
+            <tr>
+                <td height="15">DVEC</td>
+                <td>ПАО "ДЭК"</td>
+                <td>ао</td>
+                <td>1-01-55275-E</td>
+                <td>17 223 107 804</td>
+                <td>1,578</td>
+                <td>27 178 064 114,71</td>
+            </tr>
     </main>
 
 
