--- a/3.html
+++ b/3.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RGR</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        .kontakts {
+            border: 1px solid;
+            border-radius: 8px;
+            margin: 0px 150px 30px 150px;
+            padding: 5px 15px 5px 15px;
+        }
+
+        .filial {
+            margin: 80px 150px 0px 150px;
+            border: 1px solid;
+            border-radius: 7px;
+            padding: 7px;
+            width: 500px;
+            height: 240px;
+            background: linear-gradient(to right, rgba(244, 114, 38, 0.872), white, rgb(18, 18, 223));
+            display: inline-block;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,8 +38,245 @@
         </ul>
     </header>
 
-    <main>
-        <h1>Контактные данные</h1>
+    <main style="text-align: center;">
+        <h1 style="text-shadow: 3px 3px 3px gray;">Контактные данные</h1>
+
+        <h2>
+            Публичное акционерное общество
+            «Дальневосточная энергетическая компания»
+        </h2>
+
+        <div class="kontakts">
+            <div>Исполнительный директор: Юров Александр Николаевич</div>
+
+            <div>
+                Место нахождения: Российская Федерация, г. Владивосток
+                Адрес (почтовый адрес): 690091, Приморский край,
+                г. Владивосток, ул. Тигровая, 19
+            </div>
+
+            <div>Телефон: (423) 240-68-45</div>
+            <div>Адрес электронной почты: <u>priemn@dvec.ru</u></div>
+            <div>Веб-сайт: <u>www.dvec.ru</u></div>
+        </div>
+
+        <table border="1" width="60%" style="margin: auto;">
+            <tr>
+                <td colspan="2" style="text-align: center"><b>Банковские реквизиты</b><br>
+                </td>
+            </tr>
+            <tr>
+                <td><b>ИНН</b></td>
+                <td><b>2723088770</b></td>
+            </tr>
+            <tr>
+                <td><b>ОГРН</b></td>
+                <td><b>	1072721001660</b></td>
+            </tr>
+            <tr>
+                <td><b>КПП</b></td>
+                <td><b>997650001</b></td>
+            </tr>
+            <tr>
+                <td><b>ОКПО</b></td>
+                <td><b>98111286</b></td>
+            </tr>
+            <tr>
+                <td><b>БИК</b></td>
+                <td><b>040507871</b></td>
+            </tr>
+            <tr>
+                <td><b>р/с</b></td>
+                <td><b>40 702 810 0455 1000 0227</b></td>
+            </tr>
+            <tr>
+                <td><b>к/с</b></td>
+                <td><b>30 101 810 3000 0000 0871</b></td>
+            </tr>
+            <tr>
+                <td><b>Банк</b></td>
+                <td><b>Дальневосточный филиал ПАО «РОСБАНК» г. Владивосток</b></td>
+            </tr>
+            <tr>
+                <td><b>Юридический адрес банка</b></td>
+                <td><b>690091 Приморский край, г.Владивосток, ул. Уборевича, 11
+                    ИНН 7730060164</b></td>
+            </tr>
+        </table>
+
+        <div class="filial">
+            <h2>
+                Филиал «Дальэнергосбыт»
+            </h2>
+            <p>
+                690091, Россия, Приморский край, г. Владивосток, ул. Октябрьская, 8
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div class="filial">
+            <h2>
+                Филиал «Хабаровскэнергосбыт»
+            </h2>
+            <p>
+                680030, Россия, Хабаровский край, г. Хабаровск, ул. Слободская 12
+                Телефон: +7 (4212) 216950, факс: +7 (4212) 329393
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div class="filial">
+            <h2>
+                Филиал «Энергосбыт ЕАО»
+            </h2>
+            <p>
+                679000, Россия, ЕАО, г. Биробиджан, проспект 60-летия СССР, 22А
+                Телефон: +7 (42622) 21570, факс: +7 (42622) 40468
+            </p>
+            <p>
+                E-mail: <u>hotline@eao.dvec.ru</u>
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div class="filial">
+            <h2>
+                Филиал «Амурэнергосбыт»
+            </h2>
+            <p>
+                675000, Россия, Амурская область, г. Благовещенск, ул. 50 лет Октября, 65/1
+                Телефон: +7 (4162) 398-159, факс: +7 (4162) 398-158
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div class="filial">
+            <h2>
+                Филиал «Сахалинэнергосбыт»
+            </h2>
+            <p>
+                693020, Россия, Сахалинская область, г. Южно-Сахалинск,
+                ул. имени космонавта Поповича, 112
+            </p>
+            <p>
+                Телефон: (4242) 31-82-40, 31-82-59
+                E-mail: <u>infoenergo@sakh.dvec.ru</u>
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div class="filial">
+            <h2>
+                Филиал «Камчатскэнергосбыт»
+            </h2>
+            <p>
+                683006 г. Петропавловск-Камчатский, пр. Победы, 24
+            </p>
+            <p>
+                Приемная: тел. (4152) 49-09-00, факс (4152) 49-04-84
+                E-mail: <u>priemnaya@kamch.dvec.ru</u>       
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div class="filial">
+            <h2>
+                Филиал «Якутскэнергосбыт»
+            </h2>
+            <p>
+                677009, Россия, Республика Саха (Якутия), 
+                г. Якутск, ул. Фёдора Попова, 14/2
+            </p>
+            <p>
+                Приемная: тел. (4112) 21-00-11, факс (4112) 49-04-84
+                E-mail: <u>referent@yakut.dvec.ru</u>
+            </p>
+            <p>
+                Телефоны, адреса офисов по обслуживанию:
+            </p>
+            <ul>
+                <li>
+                    <u>физических лиц</u>
+                </li>
+                <li>
+                    <u>юридических лиц</u>
+                </li>
+            </ul>
+        </div>
+
+        <div style="margin-left: -500px; font-weight: bold; font-size: 30px; margin-top: 60px;">На карте:</div>
+        <div style="position:relative; overflow:hidden;">
+            <a href="https://yandex.ru/maps?utm_medium=mapframe&utm_source=maps" 
+            style="color:#eee;font-size:12px;position:absolute;top:0px;">
+            Яндекс Карты</a>
+            <a href="https://yandex.ru/maps/?from=mapframe&ll=155.138379%2C43.591300&mode=usermaps&source=mapframe&um=constructor%3Ac6f8fb8513264c4910a1d66628140f909953afa23ae441d67906d45623b2a6df&utm_medium=mapframe&utm_source=maps&z=2.97" 
+            style="color:#eee;font-size:12px;position:absolute;top:14px;">
+            Яндекс Карты — транспорт, навигация, поиск мест</a>
+            <iframe src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=155.138379%2C43.591300&mode=usermaps&source=mapframe&um=constructor%3Ac6f8fb8513264c4910a1d66628140f909953afa23ae441d67906d45623b2a6df&utm_source=mapframe&z=2.97" 
+            width="1300" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+        </div>
+
+    
     </main>
 
   
