--- a/4.html
+++ b/4.html
@@ -27,11 +27,33 @@
     </header>
 
     <main>
-        <h1 style="text-align: center;">Регистрируйся в "Личном кабинете" ПАО "ДЭК"</h1>
-        <iframe class="video" src="https://www.youtube.com/watch?v=ii_kh6u1ZnY" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
-        picture-in-picture; web-share" allowfullscreen>
-        </iframe>
+        <h1 style="text-align: center; text-shadow: 3px 3px 3px gray;">Регистрируйся в "Личном кабинете" ПАО "ДЭК"</h1>
+        <h1 style="text-align: center; margin-top: 40px; margin-bottom: 100px;">
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/_tjbijQQz4M"
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+        </h1>
+
+        <h1 style="text-align: center; text-shadow: 3px 3px 3px gray;">Работа с мобильным приложением и личным кабинетом ПАО «ДЭК»</h1>
+        <h1 style="text-align: center; margin-top: 40px; margin-bottom: 100px;">
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/CERCeQSheUY" 
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+        </h1>
+
+        <h1 style="text-align: center; text-shadow: 3px 3px 3px gray;">Работа с мобильным приложением и личным кабинетом ПАО «ДЭК»</h1>
+        <h1 style="text-align: center; margin-top: 40px;">
+            <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/ii_kh6u1ZnY" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+        </h1>
+       
     </main>
 
 
