--- a/2.html
+++ b/2.html
@@ -6,42 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RGR</title>
     <link rel="stylesheet" href="main.css">
-
-    <style> 
-
-
-    .table {
-        width: 75%;
-        margin: auto;
-        padding: 10px;
-        text-align: center;
-    }
-
-    .table2 {
-        width: 90%;
-        margin: auto;
-        text-align: center;
-        margin-top: 30px;
-        background: linear-gradient(to right, rgba(244, 114, 38, 0.872), white, rgb(18, 18, 223));
-    }
-
-    .knopka {
-        font-weight: bold;
-        border: 1px solid;
-        border-radius: 6px;
-        cursor: pointer;
-        background: linear-gradient(to right, rgba(244, 114, 38, 0.872), white, rgb(18, 18, 223));
-        display: inline-block;
-        text-align: center;
-        width: 200px;
-        height: 50px;
-        margin: 20px 15px 5px 240px;
-        font-size: 15px;
-        padding: 7px;
-        opacity: 85%;
-    }
-    </style>
-
+    
     <script>
 
         let znach = [1.625,1.610,1.714,1.685,1.705,1.724,
@@ -65,17 +30,50 @@
             VivodMin.innerHTML = "Минимальное значение за апрель: " + Min;
         } 
         function ShowDisp (znach){ 
-            let sum = znach.map(i=>x+=i, x=0).reverse()[0] 
-            let kolvozn = znach.length 
-            let midl = sum/kolvozn 
-            let zn = znach.map(i=>x+=(i-midl)**2, x=0).reverse()[0] 
-            let sr_kv_2 = zn/kolvozn 
-            let otkl = Math.sqrt(sr_kv_2) 
+            let sum = znach.map(i=>x+=i, x=0).reverse()[0];
+            let kolvozn = znach.length;
+            let midl = sum/kolvozn;
+            let zn = znach.map(i=>x+=(i-midl)**2, x=0).reverse()[0];
+            let sr_kv_2 = zn/kolvozn;
+            let otkl = Math.sqrt(sr_kv_2);
             let VivodDisp = document.getElementById("ResultDisp"); 
             VivodDisp.innerHTML = "Среднеквадратическое за апрель: " + otkl;
         }
 
     </script>
+
+    <style> 
+        .table {
+            width: 75%;
+            margin: auto;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .table2 {
+            width: 90%;
+            margin: auto;
+            text-align: center;
+            margin-top: 30px;
+            background: linear-gradient(to right, rgba(244, 114, 38, 0.872), white, rgb(18, 18, 223));
+        }
+
+        .knopka {
+            font-weight: bold;
+            border: 1px solid;
+            border-radius: 6px;
+            cursor: pointer;
+            background: linear-gradient(to right, rgba(244, 114, 38, 0.872), white, rgb(18, 18, 223));
+            display: inline-block;
+            text-align: center;
+            width: 200px;
+            height: 50px;
+            margin: 20px 15px 5px 240px;
+            font-size: 15px;
+            padding: 7px;
+            opacity: 85%;
+        }
+    </style>
 </head>
 
 <body>
@@ -324,7 +322,7 @@
             <div class="knopka" onclick="Maximum(znach2)">Максимальная цена за апрель</div>
             <div id="ResultMax"></div>
 
-            <div class="knopka" onclick="ShowDisp(znach)"> Среднеквадратическое отклонение цены</div>
+            <div class="knopka" onclick="ShowDisp(znach)">Среднеквадратическое отклонение цены</div>
             <div id="ResultDisp"></div>
         </div>
 
