--- a/4.html
+++ b/4.html
@@ -45,7 +45,7 @@
             allowfullscreen></iframe>
         </h1>
 
-        <h1 style="text-align: center; text-shadow: 3px 3px 3px gray;">Работа с мобильным приложением и личным кабинетом ПАО «ДЭК»</h1>
+        <h1 style="text-align: center; text-shadow: 3px 3px 3px gray;">ДЭК Отпуск</h1>
         <h1 style="text-align: center; margin-top: 40px;">
             <iframe width="1100" height="620" 
             src="https://www.youtube.com/embed/ii_kh6u1ZnY" 
