--- a/2.html
+++ b/2.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="main.css">
     
     <script>
-
         let znach = [1.625,1.610,1.714,1.685,1.705,1.724,
         1.729,1.777,1.811,1.775,1.845,1.843,1.815,1.790,
         1.743,1.741,1.738,1.741,1.764,1.714]; 
@@ -39,11 +38,9 @@
             let VivodDisp = document.getElementById("ResultDisp"); 
             VivodDisp.innerHTML = "Среднеквадратическое: " + otkl;
         }
-
     </script>
 
     <style> 
-    
         .table {
             width: 75%;
             margin: auto;
@@ -78,7 +75,6 @@
             font-weight: bold;
             text-align: center;
         }
-
     </style>
 </head>
 
@@ -100,7 +96,8 @@
 
         <h2 style="margin: 70px 150px 20px 150px; text-align: center;"><u>
             Рыночная капитализация ценных бумаг по итогам торгов на
-            фондовом рынке ПАО Московская Биржа на конец I квартала 2023 года</u></h2>
+            фондовом рынке ПАО Московская Биржа на конец I квартала 2023 года</u>
+        </h2>
 
         <table border="1" class="table">
             <tr>
@@ -141,14 +138,14 @@
                 <th>Количество сделок</th>
             </tr>
 
-                <tr>
-                    <td>03.04.2023</td>
-                    <td>1,575</td>
-                    <td>1,646</td>
-                    <td>1,625</td>
-                    <td>40 040 893</td>
-                    <td>3 070</td>
-                </tr>
+            <tr>
+                <td>03.04.2023</td>
+                <td>1,575</td>
+                <td>1,646</td>
+                <td>1,625</td>
+                <td>40 040 893</td>
+                <td>3 070</td>
+            </tr>
 
             <tr>
                 <td>04.04.2023</td>
@@ -322,7 +319,6 @@
             </tr>
         </table>
 
-
         <div class="vivodknopki">
             <div>
                 <div  class="knopka" onclick="Minimum(znach2)">Минимальная цена за апрель</div>
@@ -337,16 +333,6 @@
                 <div id="ResultDisp" class="vivodknopki"></div>
             </div>
         </div>
-
-        <!-- <div >
-            <div id="ResultMin" class="vivodknopki"></div>
-            <div id="ResultMax" class="vivodknopki"></div>
-            <div id="ResultDisp" class="vivodknopki"></div>
-        </div> -->
-
     </main>
-
-
-
 </body>
 </html>
